<resources>
    <string name="app_name">VOA</string>
    <string name="str_singIn">Entrar</string>
    <string name="str_singUp">Registrar-se</string>
    <string name="str_nome">Nome</string>
    <string name="str_email">Email</string>
    <string name="str_senha">Senha</string>
    <string name="str_entrar">Entrar</string>
    <string name="str_confirmar">Confirmar</string>
    <string name="str_cadastrar">Deseja criar uma conta? Clique aqui</string>
    <string name="str_boasVindas">Bem Vindo(a)</string>
    <string name="str_sair">Deslogar</string>
    <string name="str_escolhaViajar">Vamos viajar ?</string>
    <string name="str_plano">Avião</string>
    <string name="str_train">Trem</string>
    <string name="str_carro">Carro</string>
    <string name="str_home">Inicio</string>
    <string name="str_viagens">Viagens</string>
    <string name="str_perfil">Perfil</string>
    <string name="str_paises">Paises</string>
    <string name="str_cidades">Cidades</string>
    <string name="str_moeda">Moeda</string>
    <string name="str_descricaoCidade">Descriçao</string>
    <string name="title_activity_botsawana_cidade">botsawanaCidade</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>