<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormLogin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRegistra"
            style="@style/titulo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_singIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegistra" />

        <EditText
            android:id="@+id/edit_emailLogin"
            style="@style/Edit_Text"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/str_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toTopOf="@+id/containerComponents" />

        <EditText
            android:id="@+id/edit_senhaLogin"
            style="@style/Edit_Text"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/str_senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/edit_emailLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_entrarLogin"
            style="@style/Button"
            android:text="@string/str_entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_senhaLogin" />


        <TextView
            android:id="@+id/txtCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:text="@string/str_cadastrar"

            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/bt_entrarLogin" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/BrightTurquoise"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCadastrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
