<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".TelaEscolha">

        <TextView
            android:id="@+id/textView"
            style="@style/titulo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:text="@string/str_escolhaViajar"
            app:layout_constraintBottom_toTopOf="@+id/containerEscolha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.60" />

        <View
            android:id="@+id/containerEscolha"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/container_full_white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_aviao"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/container_com_sombra"
            android:drawableTop="@drawable/ic_plain"
            android:text="@string/str_plano"
            android:textAllCaps="false"
            android:textColor="@color/Abbey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bt_carro"
            app:layout_constraintEnd_toStartOf="@+id/bt_trem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_trem"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/container_com_sombra"
            android:text="@string/str_train"
            android:textAllCaps="false"
            android:textColor="@color/Abbey"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/ic_train"

            app:layout_constraintBottom_toTopOf="@+id/bt_carro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_carro"
            android:layout_width="355dp"
            android:layout_height="150dp"
            android:layout_marginTop="136dp"
            android:background="@drawable/container_com_sombra"
            android:drawableTop="@drawable/ic_car"
            android:text="@string/str_carro"
            android:textAllCaps="false"
            android:textColor="@color/Abbey"
            android:textSize="18sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/containerEscolha" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>